[package]
name = "pzem016mqtt"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros", "time"] }
lazy_static = "1.4.0"
futures = "0.3.29"
thiserror = "1.0.50"
tracing = {version = "0.1.40"}
tracing-subscriber = {version = "0.3.17", features = ["fmt","env-filter"]}
tracing-log = "0.2.0"
rumqttc = "0.23.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
serde_json = { version = "1.0.108", features = [] }
pzem016lib = { path="../pzem016lib"}
ctrlc = {version="3.4.2", features=["termination"]}
